apps/production/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: default
spec:
  selector:
    app: zigbee2mqtt
  type: LoadBalancer
  ports:
    - name: http
      port: 8000
      targetPort: http
